--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "public/scripts"]
-	path = public/scripts
+[submodule "public7"]
+	path = public7
 	url = https://github.com/Truemedia/Regeneration-Primer.git
