--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "public7"]
-	path = public7
+[submodule "public"]
+	path = public
 	url = https://github.com/Truemedia/Regeneration-Primer.git
